Make jar file produced by hextant-main executable as standalone